--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <h1 class="fn">Xiaobin Ma</h1>
         
             <p id="contact">
-                Cell: <span class="tel">+(0)86 - 15255109148</span><br />
+                Cell: <span class="tel">+86(0) - 15255109148</span><br />
                 Email: <a class="email" href="mailto:rf_backspace@outlook.com">rf_backspace@outlook.com</a>
             </p>
         </div>
